# OrfM

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  codon_tables.c  configure  configure.ac  orfm.c
codon_tables/: convert_ncbi_text_to_C_code.rb  copy_from_ncbi.txt
ext/: ac.c  ac.h
src/: orfm.c
test/: 20_random100bp.fna  orfm_spec.rb
